btsk-65: review3 반영